--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,11 @@
             <!-- Dashboard -->
             <section id="dashboard" class="page active">
                 <div class="page-header">
-                    <h1>Dashboard</h1>
+                    <div class="dashboard-banner">
+                        <div class="banner-scroll" id="dashboardBanner">
+                            <span class="banner-item">📊 Carregando resumo...</span>
+                        </div>
+                    </div>
                     <div class="dashboard-phone-search">
                         <i class="fas fa-phone"></i>
                         <input type="text" id="dashboardPhoneSearch" placeholder="Pesquisar telefones da empresa (setor, nome ou extensão)...">
