possibilidade de se colocar as expedições como concluidas

--- a/public/index.html
+++ b/public/index.html
@@ -569,6 +569,8 @@
                                     <th>Tipo Volumes</th>
                                     <th>Local Entrega</th>
                                     <th>Status</th>
+                                    <th>Conclusão</th>
+                                    <th>Ações</th>
                                 </tr>
                             </thead>
                             <tbody id="expeditionsTableBody">
