tarefas e reuniões lado a lado no dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -161,10 +161,19 @@
                     </div>
                 </div>
 
-                <div class="recent-section">
-                    <h2>Próximas Reuniões</h2>
-                    <div class="recent-meetings" id="recentMeetings">
-                        <!-- Reuniões serão carregadas dinamicamente -->
+                <div class="upcoming-cards-container">
+                    <div class="recent-section">
+                        <h2>Próximas Reuniões</h2>
+                        <div class="recent-meetings" id="recentMeetings">
+                            <!-- Reuniões serão carregadas dinamicamente -->
+                        </div>
+                    </div>
+                    
+                    <div class="recent-section">
+                        <h2>Próximas Tarefas</h2>
+                        <div class="recent-tasks" id="recentTasks">
+                            <!-- Tarefas serão carregadas dinamicamente -->
+                        </div>
                     </div>
                 </div>
             </section>
